{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 95,
  "lineage": "ed383acb-365c-c67f-07d6-d619c46edb47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DxzSky_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0171ffa474c9399df",
            "domain": "vpc",
            "id": "eipalloc-092db90563df0bac6",
            "instance": "i-03eef04ade6fcdebd",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-01d057ef84823d09f",
            "private_dns": "ip-10-0-1-50.ca-central-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-35-182-171-253.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.182.171.253",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.DxzSky_NIC",
            "aws_security_group.allow_web",
            "aws_subnet.DxzSky_WebSubN01",
            "aws_vpc.DxzSky_VPC",
            "aws_internet_gateway.DxzSky_Igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DxzSky_NgwEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01d6f73aecb842a6c",
            "domain": "vpc",
            "id": "eipalloc-07ac6a9f055e17694",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-08003529253bf86c7",
            "private_dns": "ip-10-0-1-51.ca-central-1.compute.internal",
            "private_ip": "10.0.1.51",
            "public_dns": "ec2-3-97-233-62.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.233.62",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DxzSky_AppSerLnx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d95746fec4b20a3",
            "arn": "arn:aws:ec2:ca-central-1:861713756700:instance/i-09d6fed9303b7693d",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d6fed9303b7693d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2-Ca-central-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-008a574950fb3f3f1",
            "private_dns": "ip-10-0-2-140.ca-central-1.compute.internal",
            "private_ip": "10.0.2.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d2f9483b6b1f8446",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d90aa70a46bd711",
            "tags": {
              "Name": "DxzSky_AppSerLnx"
            },
            "tags_all": {
              "Name": "DxzSky_AppSerLnx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f6aa91160aa25c24"
            ]
          },
          "dependencies": [
            "aws_vpc.DxzSky_VPC",
            "aws_subnet.DxzSky_AppSubN01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DxzSky_WebSerUbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0801628222e2e96d6",
            "arn": "arn:aws:ec2:ca-central-1:861713756700:instance/i-03eef04ade6fcdebd",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03eef04ade6fcdebd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2-Ca-central-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-01d057ef84823d09f"
              }
            ],
            "primary_network_interface_id": "eni-01d057ef84823d09f",
            "private_dns": "ip-10-0-1-50.ca-central-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "35.182.171.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01443e78ab970516c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bf451d2fb979501",
            "tags": {
              "Name": "DxzSky_WebSerUbt"
            },
            "tags_all": {
              "Name": "DxzSky_WebSerUbt"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e057cfd9d8317c7c"
            ]
          },
          "dependencies": [
            "aws_network_interface.DxzSky_NIC",
            "aws_security_group.allow_web",
            "aws_subnet.DxzSky_WebSubN01",
            "aws_vpc.DxzSky_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DxzSky_Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:861713756700:internet-gateway/igw-0d8674bdac15ecce7",
            "id": "igw-0d8674bdac15ecce7",
            "owner_id": "861713756700",
            "tags": {
              "Name": "Dxzsky_Igw"
            },
            "tags_all": {
              "Name": "Dxzsky_Igw"
            },
            "vpc_id": "vpc-0f5472ae8195518ab"
          },
          "dependencies": [
            "aws_vpc.DxzSky_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "DxzSky_Ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ac6a9f055e17694",
            "id": "nat-0a2b085d880893ede",
            "network_interface_id": "eni-08003529253bf86c7",
            "private_ip": "10.0.1.51",
            "public_ip": "3.97.233.62",
            "subnet_id": "subnet-05bf451d2fb979501",
            "tags": {
              "Name": "DxzSky_Ngw"
            },
            "tags_all": {
              "Name": "DxzSky_Ngw"
            }
          },
          "dependencies": [
            "aws_internet_gateway.DxzSky_Igw",
            "aws_subnet.DxzSky_WebSubN01",
            "aws_vpc.DxzSky_VPC",
            "aws_eip.DxzSky_NgwEIP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "DxzSky_NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0c4c35577333716e0",
                "device_index": 0,
                "instance": "i-03eef04ade6fcdebd"
              }
            ],
            "id": "eni-01d057ef84823d09f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:85:85:90:26:62",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e057cfd9d8317c7c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bf451d2fb979501"
          },
          "dependencies": [
            "aws_vpc.DxzSky_VPC",
            "aws_security_group.allow_web",
            "aws_subnet.DxzSky_WebSubN01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DxzSky_PrivRt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:861713756700:route-table/rtb-0e7beb807f7a43581",
            "id": "rtb-0e7beb807f7a43581",
            "owner_id": "861713756700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a2b085d880893ede",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DxzSky_PrivRt"
            },
            "tags_all": {
              "Name": "DxzSky_PrivRt"
            },
            "vpc_id": "vpc-0f5472ae8195518ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.DxzSky_Ngw",
            "aws_vpc.DxzSky_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DxzSky_PubRt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:861713756700:route-table/rtb-0b268c6cc49c06214",
            "id": "rtb-0b268c6cc49c06214",
            "owner_id": "861713756700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8674bdac15ecce7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DxzSky_PubRt"
            },
            "tags_all": {
              "Name": "DxzSky_PubRt"
            },
            "vpc_id": "vpc-0f5472ae8195518ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DxzSky_VPC",
            "aws_internet_gateway.DxzSky_Igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DxzSky_PrivRtAss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e63a4c6e4cdc24e7",
            "route_table_id": "rtb-0e7beb807f7a43581",
            "subnet_id": "subnet-09d90aa70a46bd711"
          },
          "dependencies": [
            "aws_nat_gateway.DxzSky_Ngw",
            "aws_route_table.DxzSky_PrivRt",
            "aws_subnet.DxzSky_AppSubN01",
            "aws_subnet.DxzSky_WebSubN01",
            "aws_vpc.DxzSky_VPC",
            "aws_eip.DxzSky_NgwEIP",
            "aws_internet_gateway.DxzSky_Igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DxzSky_PubRtAss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f125ecda3e932e9",
            "route_table_id": "rtb-0b268c6cc49c06214",
            "subnet_id": "subnet-05bf451d2fb979501"
          },
          "dependencies": [
            "aws_internet_gateway.DxzSky_Igw",
            "aws_route_table.DxzSky_PubRt",
            "aws_subnet.DxzSky_WebSubN01",
            "aws_vpc.DxzSky_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:861713756700:security-group/sg-0e057cfd9d8317c7c",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e057cfd9d8317c7c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "861713756700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DxzSky_WebSg"
            },
            "tags_all": {
              "Name": "DxzSky_WebSg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5472ae8195518ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DxzSky_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DxzSky_AppSubN01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:861713756700:subnet/subnet-09d90aa70a46bd711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09d90aa70a46bd711",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861713756700",
            "tags": {
              "Name": "DxzSky_AppSubN01"
            },
            "tags_all": {
              "Name": "DxzSky_AppSubN01"
            },
            "vpc_id": "vpc-0f5472ae8195518ab"
          },
          "dependencies": [
            "aws_vpc.DxzSky_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DxzSky_WebSubN01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:861713756700:subnet/subnet-05bf451d2fb979501",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05bf451d2fb979501",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861713756700",
            "tags": {
              "Name": "DxzSky_WebSubN01"
            },
            "tags_all": {
              "Name": "DxzSky_WebSubN01"
            },
            "vpc_id": "vpc-0f5472ae8195518ab"
          },
          "dependencies": [
            "aws_vpc.DxzSky_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DxzSky_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:861713756700:vpc/vpc-0f5472ae8195518ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0035ddb2f6cc77c9c",
            "default_route_table_id": "rtb-02819defaca14ddff",
            "default_security_group_id": "sg-0f6aa91160aa25c24",
            "dhcp_options_id": "dopt-7d222115",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f5472ae8195518ab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02819defaca14ddff",
            "owner_id": "861713756700",
            "tags": {
              "Name": "DxzSky_VPC-Core"
            },
            "tags_all": {
              "Name": "DxzSky_VPC-Core"
            }
          }
        }
      ]
    }
  ]
}